<resources>
    <string name="app_name">Quiz App</string>
    <string name="score">Score 0/8</string>
    <string name="question_number">1/8</string>
    <string name="question1">Who is known as the father of Java Programming Language?</string>
    <string name="question1_a">James Gosling</string>
    <string name="question1_b">Blais Pascal</string>
    <string name="question1_c">Charles Babbage</string>
    <string name="question1_d">Dennis Ritchie</string>
    <string name="answer_1">James Gosling</string>
    <string name="question2">Which of the following is not a Java keyword?</string>
    <string name="question2_a">double</string>
    <string name="question2_b">int</string>
    <string name="question2_c">for</string>
    <string name="question2_d">go</string>
    <string name="answer_2">go</string>
    <string name="question3">What is the full form of JVM ?</string>
    <string name="question3_a">Java Verified Machine</string>
    <string name="question3_b">Java Virtual Machine</string>
    <string name="question3_c">Java Verilog Machine</string>
    <string name="question3_d">Java Virtual Mechanics</string>
    <string name="answer_3">Java Virtual Machine</string>
    <string name="question4">Which of the following is not an OOPS concept?</string>
    <string name="question4_a">Encapsulation</string>
    <string name="question4_b">Abstraction</string>
    <string name="question4_c">Exception</string>
    <string name="question4_d">Polymorphism</string>
    <string name="answer_4">Exception</string>
    <string name="question5">What is file extension in Java?</string>
    <string name="question5_a">.py</string>
    <string name="question5_b">.java</string>
    <string name="question5_c">.docx</string>
    <string name="question5_d">.c</string>
    <string name="answer_5">.java</string>
    <string name="question6"> How many types of polymorphism are there in Java?</string>
    <string name="question6_a">Two</string>
    <string name="question6_b">One</string>
    <string name="question6_c">Three</string>
    <string name="question6_d">Five</string>
    <string name="answer_6">Two</string>
    <string name="question7">Which doesn’t have a body?</string>
    <string name="question7_a"> Class</string>
    <string name="question7_b"> Method</string>
    <string name="question7_c"> Interface</string>
    <string name="question7_d"> Abstract Method</string>
    <string name="answer_7"> Abstract Method</string>
    <string name="question8">The wrapping up of data and functions into a single unit is called?</string>
    <string name="question8_a">Encapsulation</string>
    <string name="question8_b"> Abstraction</string>
    <string name="question8_c"> Polymorphism</string>
    <string name="question8_d">Data Hiding</string>
    <string name="answer_8">Encapsulation</string>
    <string name="selected_option">selected option</string>
    <string name="correct_answer">correct Answer</string>
</resources>