<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="#151322" tools:context=".MainActivity">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/QuestionNo" android:text="@string/question_number" android:layout_marginTop="30dp" android:textColor="#ffa384" android:textStyle="bold" android:textAlignment="center" android:textSize="20sp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selected_option" android:visibility="gone" android:id="@+id/selectOption" android:textAlignment="center" android:textColor="@color/white"> </TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/correctAnswer" android:textColor="@color/white" android:visibility="gone" android:textAlignment="center" android:text="@string/correct_answer"> </TextView>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="120dp" android:paddingLeft="50dp" android:paddingRight="50dp" android:layout_marginBottom="60dp" android:layout_marginTop="60dp" android:gravity="center">
        <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:textColor="@color/white" android:id="@+id/question" android:text="@string/question1" android:textSize="23sp"> </TextView>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/firstTwoOption" android:layout_gravity="center" android:paddingLeft="50dp" android:paddingRight="50dp" android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/optionA" android:text="@string/question1_a" android:background="@drawable/optiondesign" android:textColor="@color/white" android:textAlignment="center" android:paddingTop="14dp"> </TextView>
        <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/optionB" android:text="@string/question1_b" android:background="@drawable/optiondesign" android:layout_marginTop="15dp" android:textColor="@color/white" android:textAlignment="center" android:paddingTop="14dp"> </TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/remainingTwoOption" android:layout_marginBottom="30dp" android:layout_gravity="center" android:paddingLeft="50dp" android:paddingRight="50dp" android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/optionC" android:text="@string/question1_c" android:background="@drawable/optiondesign" android:layout_marginTop="15dp" android:textColor="@color/white" android:textAlignment="center" android:paddingTop="14dp"> </TextView>
        <TextView android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/optionD" android:text="@string/question1_d" android:background="@drawable/optiondesign" android:layout_marginTop="15dp" android:textColor="@color/white" android:textAlignment="center" android:paddingTop="14dp"> </TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/score" android:textStyle="bold" android:text="@string/score" android:textColor="#ffffff" android:padding="10dp" android:layout_gravity="end"/>
        <ProgressBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:backgroundTint="#ffa384" android:layout_gravity="bottom" android:id="@+id/progressBar" style="@android:style/Widget.ProgressBar.Horizontal" android:indeterminate="false"/>
    </LinearLayout>
</LinearLayout>